tests/invalid/unop_type_mismatch.ar
fn main() {
    {
        const a: u8;
        const b = --a; // this is deliberate
    }

    {
        const a: u16;
        const b = -a;
    }

    {
        const a: u32;
        const b = -a;
    }

    {
        const a: u64;
        const b = -a;
    }
}

//! 4:20: error: cannot negate unsigned operand of type `u8`
//! 9:19: error: cannot negate unsigned operand of type `u16`
//! 14:19: error: cannot negate unsigned operand of type `u32`
//! 19:19: error: cannot negate unsigned operand of type `u64`
